[package]
name = "pcg"
version = "0.3.0" # reflects current chapter
authors = ["James Tranovich <jtranovich@gmail.com>"]

[dependencies]
docopt = "*"
rustc-serialize = "*"
piston = "*"
piston2d-opengl_graphics = "*"
piston2d-graphics = "*"
pistoncore-sdl2_window = "*"
freetype-rs = "*"
shader_version = "*"
rand = "*"
threadpool = "*"
num_cpus = "*"
libc = "*"
pistoncore-input = "*"
pistoncore-window = "*"
pistoncore-event_loop = "*"

[features]
default = ["image_png"]
image_gif = ["image/gif"]
image_jpeg = ["image/jpeg"]
image_png = ["image/png"]
image_ppm = ["image/ppm"]
image_tga = ["image/tga"]
image_tiff = ["image/tiff"]
image_webp = ["image/webp"]

[dependencies.image]
version = "*"
default-features = true

[dependencies.piston-viewport]
git = "https://github.com/pistondevelopers/viewport"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[profile.dev]
debug = false
