[package]
name = "pcg"
version = "0.3.0" # reflects current chapter
authors = ["James Tranovich <jtranovich@gmail.com>"]

[dependencies]
docopt = "0.6.75"
rustc-serialize = "0.3.16"
pistoncore-input = "0.8.0"
pistoncore-window = "0.13.0"
pistoncore-sdl2_window = "0.18.0"
piston2d-opengl_graphics = "0.19.0"
piston2d-graphics = "0.11.0"
pistoncore-event_loop = "0.15.0"
freetype-rs = "0.4.0"
shader_version = "0.2.0"
rand = "0.3.12"
threadpool = "0.1.4"
num_cpus = "0.2.7"
libc = "0.2.2"
toml = "0.1.23"

[features]
default = ["image_png"]
image_gif = ["image/gif"]
image_jpeg = ["image/jpeg"]
image_png = ["image/png"]
image_ppm = ["image/ppm"]
image_tga = ["image/tga"]
image_tiff = ["image/tiff"]
image_webp = ["image/webp"]

[dependencies.image]
version = "0.5.0"
default-features = true

[profile.dev]
debug = false
